--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -724,6 +724,10 @@
  TUR_constitutional_reform:0 "Constitutional Reforms"
  TUR_diplomatic_isolation:0 "Diplomatic Isolation"
  TUR_diplomatic_isolation_desc:0 "As proven from our recent wars, no great power is willing to allign with us. How long this isolation will last is uncertain, but the fact that we have to find some allies if we want to survive is unquestionable."
+ TUR_diplomatic_isolation_tt:0 "£trigger_no Can receive volunteer forces\n£trigger_no Can get guaranteed"
+ TUR_diplomatic_isolation_tt2:0 "£trigger_no Can get guaranteed"
+ CANNOT_SEND_VOLUNTEERS_TO_OTTOMANS:0 "§R- [TUR.GetName] cannot receive volunteer forces.§!"
+ CANNOT_GUARANTEE_TO_OTTOMANS:0 "§R- [TUR.GetName] cannot get guaranteed.§!"
  TUR_anti_infidel_diplomacy:0 "Anti-Infidel Diplomacy"
  TUR_imperial_diplomacy:0 "Imperial Diplomacy"
  TUR_new_ottoman_army:0 "New Imperial Army"
