Changes to arms limitations

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8217,6 +8217,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  ENG_FRA_intervene_in_civil_war:0 "Intervention in British Civil War"
  ENG_sue_for_peace_IRE:0 "Withdraw from Ireland"
  ENG_cancel_chinde_concession:0 "Cancel the British Concession of Chinde"
+ ENG_propose_arms_limitations:0 "Propose Arms Limitations"
  ENG_sue_for_peace_AFG:0 "Give Up the Durand Line"
  ENG_annex_kurdistan:0 "Annex Kurdistan"
 
