--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -42,6 +42,8 @@
  despotism_desc:0 "A civilian dictatorship is a form of authoritarian government where the absolute political power in the state is concentrated in the hands of a single or few individuals. As opposed to military dictatorships, rulers in civilian dictatorships don't derive their power from the military, but usually use democratic procedures to get in their position, and employ repressive methods to maintain it."
  authoritarian_democracy:0 "Managed Democracy"
  authoritarian_democracy_desc:0 "Managed Democracy is a form of authoritarian government where formally democratic procedures exist, but are limited to the extent which allows the current government to hold the office indefinitely. Opposition can exist in such regimes, but its chances of winning against the ruling party through purely legal means are miniscule."
+ colonial_government:0 "Colonial Government"
+ colonial_government_desc:0 "Colonial Government is a type of government imposed by an external colonial power over some territory, a colony. Colonial Governments are appointed either directly by the colonial power, or elected among the minority population of colonial settlers, while the majority indigenous population of the colony is disenfranchised."
  theocracy_ideology:0 "Theocracy"
  theocracy_ideology_desc:0 "Theocracy is a form of government in which God or a deity of some type is recognized as the supreme ruling authority, giving divine guidance to human intermediaries that manage the day to day affairs of the government."
  
@@ -97,10 +99,11 @@
  classical_liberalism_desc:0 "Classical liberalism is the ideology of liberties, rights, individualism, reason, and tolerance. It favors a limited mixed government with voting rights."
  social_liberalism:0 "Social Liberalism"
  social_liberalism_desc:0 "Social liberalism is the ideology of collective liberties and rights that favors social welfare and justice. Unlike the classical liberalism, which favors liberty on issues of state, social liberalism mixes in classically conservative planks like taxation, regulations on individuals, groups, and businesses, and more in an effort to ensure social justice and social welfare via government."
- 
- #Ideologies to remove
  liberal_conservatism:0 "Liberal Conservativism"
  liberal_conservatism_desc:0 "Liberal conservatism is a political ideology combining conservative policies with liberal stances, especially on economic issues but also on social matters, representing a brand of political conservatism strongly influenced by liberalism. The ideology incorporates the classical-liberal view on economic interventionism, according to which individuals should be free to participate in the market and generate wealth without government interference. However, liberal conservatives also hold that individuals cannot be thoroughly depended on to act responsibly in other spheres of life; therefore, they believe that a strong state is necessary to ensure law and order and that institutions are needed to nurture a sense of duty and responsibility to one's family and one's nation. They also support civil liberties, along with some socially conservative positions."
+
+ 
+ #Ideologies to remove
  tridemism:0 "Tridemism"
  tridemism_desc:0 "The three principles of the people as created by Sun Yat-sen includes nationalism, democracy, and welfare. Nationalism intended to create a unified Chinese identity. Democracy should provide people with ample access to the government. And welfare is needed so that the government will look after its people."
  agrarianism:0 "Agrarianism"
