--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -547,11 +547,11 @@
 
  #Parties
 
- RUS_communism_party: "Mensheviki"
- RUS_communism_party_long: "Rossiyskaya Sotsial-Demokraticheskya Rabochaya Partiya"
+ RUS_communism_party: "RSDRP(M)"
+ RUS_communism_party_long: "Rossiyskaya Sotsial-Demokraticheskya Rabochaya Partiya (Menshevikov)"
  RUS_communism_party_SR: "Esery"
  RUS_communism_party_SR_long: "Partiya Sotsialistov-Revolyutsionerov"
- RUS_democratic_party: "Kadety"
- RUS_democratic_party_long: "Partiya Narodnoy Svobody"
+ RUS_democratic_party: "KDP"
+ RUS_democratic_party_long: "Konstitutsionno-Demokraticheskaya Partiya"
  RUS_fascism_party: "Pravyye"
  RUS_fascism_party_long: "Gruppa Pravykh"
