--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -490,7 +490,7 @@
  VIN_empire_fascist:0 "Greater Ming State"
  VIN_empire_fascist_long:0 "Greater Ming State"
 
- SOV_communism_party:0 "Bolsheviky"
+ SOV_communism_party:0 "Bolsheviki"
  SOV_communism_party_long:0 "Rossiyskaya Sotsial-demokraticheskaya Rabochaya Partiya (Bolshevikov)"
  SOV_democratic_party:0 "KSRiR"
  SOV_democratic_party_long:0 "Komitet spaseniya Rodiny i revolyutsii"
@@ -498,13 +498,13 @@
  SOV_fascism_party_long:0 "Soyuz zashchity Rodiny i Svobody"
  SOV_neutrality_party:0 "VNTs"
  SOV_neutrality_party_long:0 "Vserossiyskiy natsionalnyy tsentr"
- SOV_communism_party_postwar:0 "VCP(b)"
+ SOV_communism_party_postwar:0 "VKP(B)"
  SOV_communism_party_postwar_long:0 "Vsesoyuznaya Kommunisticheskaya Partiya (Bolshevikov)"
  SOV_fascism_party_postwar:0 "RFO"
  SOV_fascism_party_postwar_long:0 "Russkaya Fashistskaya Organizatsiya"
  SOV_neutrality_party_postwar:0 "BRP"
  SOV_neutrality_party_postwar_long:0 "Bratstvo Russkoy Pravdy"
- SOV_communism_party_dictatorship:0 "RKP(b)"
+ SOV_communism_party_dictatorship:0 "RKP(B)"
  SOV_communism_party_dictatorship_long:0 "Rossiyskaya Kommunisticheskaya Partiya (Bbolshevikov)"
 
  AUS_fascism_party:0 "DNSAP"
@@ -1374,7 +1374,7 @@
  
  BLR_democratic_party:0 "BCD"
  BLR_democratic_party_long:0 "Belarusian Christian Democracy"
- BLR_communism_party:0 "Bolsheviky"
+ BLR_communism_party:0 "Bolsheviki"
  BLR_communism_party_long:0 "Belarusian sections of the RCP(b)"
  BLR_neutrality_party:0 "Rada"
  
