Redone Trees - Code needs some serious cleaning

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10411,18 +10411,28 @@ unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
 
 #Germany Rework
 
-GER_chancellor_von_hollweg:0 "Chancellor von Hollweg"
-GER_chancellor_von_hollweg_desc:0 ""
-GER_the_postal_tax:0 "The Postal Tax"
-GER_the_postal_tax_desc:0 ""
+GER_the_chancellors_reforms:0 "The Chancellor's Reforms"
+GER_the_chancellors_reforms_desc:0 ""
+GER_a_national_census:0 "A National Census"
+GER_a_national_census_desc:0 ""
 GER_deal_with_the_sokehs_rebellion:0 "Deal with the Sokehs Rebellion"
 GER_deal_with_the_sokehs_rebellion_desc:0 ""
 GER_the_job_placement_act:0 "The Job Placement Act"
 GER_the_job_placement_act_desc:0 ""
 GER_a_constitution_for_alsace:0 "A Constitution for Alsace"
 GER_a_constitution_for_alsace_desc:0 ""
-GER_the_mission_of_today:0 "The Mission of Today"
-GER_the_mission_of_today_desc:0 ""
+GER_bolster_the_center_parties:0 "Bolster the Centre Parties"
+GER_bolster_the_center_parties_desc:0 ""
+GER_socialist_censorship:0 "Socialist Censorship"
+GER_socialist_censorship_desc:0 ""
+GER_zentrum_for_germany:0 "Zentrum for Germany"
+GER_zentrum_for_germany_desc:0 ""
+GER_deals_with_the_other_devils:0 "Deals with the other Devils"
+GER_deals_with_the_other_devils_desc:0 ""
+GER_discourage_voting_for_local_parties:0 "Discourage Voting for Local Parties"
+GER_discourage_voting_for_local_parties_desc:0 ""
+GER_the_greatest_mission_of_today:0 "The Greatest Mission of Today"
+GER_the_greatest_mission_of_today_desc:0 ""
 GER_the_reich_to_bavaria_railway:0 "The Reich to Bavaria Railway"
 GER_the_reich_to_bavaria_railway_desc:0 ""
 GER_agricultural_incentives:0 "Agricultural Incentives"
@@ -10439,8 +10449,8 @@ GER_electrical_advisory_councils:0 "Electrical Advisory Councils"
 GER_electrical_advisory_councils_desc:0 ""
 GER_additions_to_health_insurance:0 "Additions to Health Insurance"
 GER_additions_to_health_insurance_desc:0 ""
-GER_women_in_the_workforce:0 "Women in the Workforce"
-GER_women_in_the_workforce_desc:0 ""
+GER_encourage_women_in_the_workforce:0 "Encourage Women in the Workforce"
+GER_encourage_women_in_the_workforce_desc:0 ""
 GER_the_reich_and_nationality_law:0 "The Reich and Nationality Law"
 GER_the_reich_and_nationality_law_desc:0 ""
 GER_nationalised_housing_for_civil_employees:0 "Nationalised Housing for Civil Employees"
@@ -10455,11 +10465,11 @@ GER_asian_weapon_trading:0 "Asian Weapon Trading"
 GER_asian_weapon_trading_desc:0 ""
 GER_the_east_african_railway_project:0 "The East African Railway Project"
 GER_the_east_african_railway_project_desc:0 ""
-GER_exploit_the_diamond_deposits:0 "Exploit the Diamond Desposits"
+GER_exploit_the_diamond_deposits:0 "Exploit the Diamond Deposits"
 GER_exploit_the_diamond_deposits_desc:0 ""
 GER_development_of_samoa:0 "Development of Samoa"
 GER_development_of_samoa_desc:0 ""
-GER_guarding_the_pacific:0 "Guarding the Paacific"
+GER_guarding_the_pacific:0 "Guarding the Pacific"
 GER_guarding_the_pacific_desc:0 ""
 GER_german_japanese_trading_treaty:0 "German-Japanese Trading Treaty"
 GER_german_japanese_trading_treaty_desc:0 ""
