--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3366,7 +3366,9 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_holland.13.t:0 "Food Shortages!"
  ww1_holland.13.d:0 "Food supplies in our country is running low due to the ongoing Great War where a blockade has been imposed on Europe to starve out Germany. This has effected us aswell and food supplies in our country is running low. People have begun getting disatisfied only time will tell how long this war will go on for..."
  ww1_holland.13.a:0 "Something must be done!"
- 
+kis_news.143.t:0 "Failed Socialist Revolution in the Netherlands"
+kis_news.143.d:0 "News from the Netherlands has came out detailing a failed attempt to start a socialist revolution, after a week of chaos. The failed revolution comes a result of the ongoing food shortage in the Netherlands, as well as the dramatic rise of unemployment and poverty in the nation in the past few years. With the nation suffering, socialists decided to take their chance, calling upon massive protests in the nation. Dutch police were quick to reinforce cities facing mass protests with police officers, however, who swiftly rounded up and arrested socialist agitators. Either way, the failed revolt has caused panic amongst Western European governments, who have previously assumed there was little chance at revolt in their nations."
+kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  #MEXICO
  mexican_revolution:0 "Mexican Revolution"
  ww1_mexico.1.t:0 "Mexican Revolution"
