--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -317,6 +317,8 @@
  ### SiC
 
  ### Political Advisors
+ POL_prime_minister_red_pilsudskite:0 "Red Pilsudskite" #Prime Minister: Red Pilsudskite
+ POL_prime_minister_ambassador_of_polish_affairs:0 "Ambassador of Polish Affairs" #Prime Minister: Ambassador of Polish Affairs
  POL_germanophile:0 "Polish Germanophile"
 
 
