--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -288,8 +288,17 @@ FRENCH_EARLY_DEFEAT_DESC:0 "French and German Ais will act differently, favoring
  RULE_OPTION_SPARTAKIST_AI_DESC:0 "The German AI, after losing the great war, will attempt to establish a communist republic by going down the relevant path in the national focus tree."
 
  # France
+ RULE_OPTION_SOCIALIST_FRA:0 "Socialist - §OReformists§!"
  RULE_OPTION_SOCIALIST_FRA_AI_DESC:0 "The French AI will attemp to make left parties unite under Jean Jaurès to establish a socialist state by going down the relevant path in the national focus tree."
  RULE_OPTION_DEMOCRATIC_ALTERNATE_FRA_AI_DESC:0 "The French AI will attemp to focus on interventionism by going down the relevant path in the national focus tree."
+
+ RULE_OPTION_HISTORICAL_FRA:0 "Democratic - §3Center-Left§! (Historical)"
+ RULE_OPTION_DEMOCRATIC_ALTERNATE_FRA:0 "Democratic - §9Left§!"
+
+ RULE_OPTION_SOCIALIST_REVOLUTIONNARY_FRA:0 "Socialist - §tRevolutionarists§!"
+ RULE_OPTION_SOCIALIST_REVOLUTIONNARY_FRA_AI_DESC:0 "The French AI will attemp to make left parties unite under Jean Jaurès to establish a socialist state by going down the relevant path in the national focus tree."
+ RULE_OPTION_DEMOCRATIC_ALTERNATE_FRA_AI_DESC:0 "The French AI will attemp to focus on interventionism by going down the relevant path in the national focus tree."
+
  RULE_OPTION_FASCIST_FRA:0 "National-Syndicalist"
  RULE_OPTION_FASCIST_FRA_AI_DESC:0 "The French AI will attemp to adopt a Proto-Fascist National-Syndicalist system by going down the relevant path in the national focus tree."
 
