--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1898,6 +1898,11 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.426.a:0 "Ben voyons..."
  ww1_france.426.b:0 "Lets make an exceptional compromise!"
 
+ ww1_france.427.t:0 "Pro-liberal Activism"
+ ww1_france.427.d:0 "The social reforms we have carried out have had great success in France, transforming an imperialist nation from a conservative one into an exemplary country in terms of social achievements and equality. Unfortunately, this great freedom of thought applies to politics, allowing the opposition to criticize our anti-militarist, anti-imperialist and anti-capitalist positions. Popular personalities like Jacques Piou or Raymond Pointcarré are maneuvering against our interests."
+ ww1_france.427.a:0 "Concerning..."
+
+
  #BELGIUM
  ww1_belgium.1.t:0 "Rape of Belgium"
  ww1_belgium.1.desc:0 "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
