--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -581,6 +581,17 @@
  VICTORY_POINTS_1054:0 "Tongyeong"
  VICTORY_POINTS_4086:0 "Daegu"
  VICTORY_POINTS_11829:0 "Üsküdar"
+ VICTORY_POINTS_10798:0 "Oklahoma City"
+ VICTORY_POINTS_12778:0 "Fort Smith"
+ VICTORY_POINTS_7543:0 "Pine Bluff"
+ VICTORY_POINTS_10410:0 "Jackson"
+ VICTORY_POINTS_12429:0 "Meridian"
+ VICTORY_POINTS_1615:0 "Hattiesburg"
+ VICTORY_POINTS_4653:0 "Greenville"
+ VICTORY_POINTS_10352:0 "Pensacola"
+ VICTORY_POINTS_12401:0 "Shreveport"
+ VICTORY_POINTS_6803:0 "McAlester"
+ VICTORY_POINTS_1618:0 "Muskogee"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
