--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -438,7 +438,9 @@
  SAU_telegraph_operator: "Telegraph Operator"
  pan_arabist_doctor: "Pan Arabist Medical Doctor"
  progressive_royal: "Progressive Royal"
+ famous_politician: "Internationally Famous Figure"
  Whabbist_demagogue: "Whabbist Demagogue"
+ gun_dealer: "Gun Dealer"
  melanchonic_king:0 "Melanchonic King"
  charismatic_prime_minister:0 "Charismatic Prime Minister"
  bonaparte_legacy:0 "Bonaparte Legacy"
