--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2329,7 +2329,7 @@ ww1_chile.56.t:0 "First Crossing Of The Andes"
 ww1_chile.56.d:0 "[GetDateText], Lieutenant Dagoberto Godoy climbed into his 110 HP Bristol Le Rhone N°4988 and took off from the El Bosque air base, south of Santiago.5 After flying for two hours over the Andes Mountains at an altitude of 6300 meters, he landed at Lagunitas, near Mendoza, Argentina.It was the first flight of an airplane over the Andes Mountains.5"
 ww1_chile.56.a:0 "A Landmark For Aviation!"
 ww1_chile.57.t:0 "The Finding Of Sulfur Reserves In The Aucanquilcha Volcano"
-ww1_chile.57.d:0 "The Year Is [GetYear],the brothers Raúl, Hipólito and Vicencio Carrasco have discovered the sulfur reserves found at high altitude on the northeast face of the mountain, and founded Sociedad Industrial, Azufrera y Minera Carrasco S.A., an industrial, sulfur and mining company."
+ww1_chile.57.d:0 "The Year Is [GetYear],the brothers Hipólito and Vicencio Carrasco have discovered the sulfur reserves found at high altitude on the northeast face of the mountain, and founded Sociedad Industrial, Azufrera y Minera Carrasco S.A., an industrial, sulfur and mining company."
 ww1_chile.57.a:0 "kewl."
 ww1_chile.58.t:0 "Lieutenant Bello Disappears!"
 ww1_chile.58.d:0 "[GetDateText] - Yesterday, Lieutenant Alejandro Bello Silva disappeared during a training flight from the Lo Espejo Military Aeronautics School. In adverse weather conditions, Bello veered off course and went out of sight. Despite intensive searches, no trace of the pilot or his aircraft has been found. Disappearance of Lieutenant Bello leaves Chilean society dismayed.."
