parliament gui intense work

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8853,3 +8853,17 @@ july_crisis_austrian_claim:0 "§Y[AUH.getFlag][AUH.getName]§! wants reparation 
 july_crisis_serbian_claim:0 "§Y[SER.getFlag][SER.getName]§! oppose this decision"
 july_crisis_alert:0 "July crisis alert"
 july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][AUH.getAdjective]§! claims for reparations toward §Y[SER.getFlag][SER.getName]§!."
+
+ GER_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yreichstag§!"
+
+ GER_vote_strengh_tt:0 "The Law may be voted by §Y[?merged_vote_strengh|0] Deputies§!."
+
+ GER_sway_center_will_vote_5_percent:0 "§Y5%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
+
+ GER_law_pass:0 "§GThe Law shall pass§!"
+
+ GER_law_dont_pass:0 "§RThe Law wont likely pass§!"
+
+ GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
+
+ GER_vote_left_law:0 "This is considered as a leftist law. §Y80%§! of §Oleft deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
