--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -56,6 +56,10 @@
 
  #SCRIPTED GUIS
  GER_semicircle_parliament_gui_title:0 "The Reichstag"
+ GER_factions_report_desc:0 "§tLeftists§! control §Y[?GER_left_faction|Y0] seats§!\n§gCentrists§! control §Y[?GER_center_faction|Y0] seats§!\n§3Rightists§! control §Y[?GER_right_faction|Y0] seats§!\n§LNeutrals§! control §Y[?GER_neutral_faction|Y0] seats§!"
+ GER_total_count_desc:0 "397"
+ GER_total_count_tt:0 "§gReichstag seats§!"
+
  GER_parliament_main_icon_tt:0 "[GERGetParliamentSeatName] - [GERGetParliamentPartyName]"
 
  GER_parliament_seat_text:0 "Seat [?temp_seat|Y0]"
@@ -65,6 +69,8 @@
  GER_parliament_predicted_member_text:0 "[GERGetParliamentPartyName] - [?GER_upcoming_reichstag_seats^parliament_member_index] Seats"
 
  GER_parliament_modify_button_tt:0 "§GCtrl+Click§! to add §Y5§! Seats from [GERGetParliamentPartyName]\n§GShift+Click§! to subtract §Y5§! Seats from [GERGetParliamentPartyName]"
+
+ GER_the_parliament_seats_will_change:0 "§YParliament seats will change.§!"
 
  #PARTIES
  GER_party_1_text:0 "Social Democratic Party"
