--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -357,8 +357,8 @@
  FRA_aristide_briand_rally_desc:0 "§YAristide Briand§! will organize a rally of moderate socialist parties and left-wing democrats. \n\n§YThe democratic Republican Alliance§! will gain §Y50§! additional seats."
  FRA_aristide_briand_rally_citation:0 "“Il est un droit supérieur à tous les autres, c'est le droit de vivre d'une collectivité nationale. Pour défendre l'existence de la nation, s'il avait fallu aller jusqu'à l'illégalité, je n'aurais pas hésité.“"
 
- FRA_royalist_demonstration_in_versailles:0 "Jacque Piou's Royalist Demonstration In Versailles"
- FRA_royalist_demonstration_in_versailles_desc:0 "§YJacques Piou§! will gather the supporters of the monarchy and launch a massive procession in Versailles.\n\n§gThe popular liberal action§! will gain §Y50§! additional seats"
+ FRA_royalist_demonstration_in_versailles:0 "Léon Daudet's Royalist Demonstration In Versailles"
+ FRA_royalist_demonstration_in_versailles_desc:0 "§YLéon Daudet§! will gather the supporters of the monarchy and launch a massive procession in Versailles.\n\n§gThe popular liberal action§! will gain §Y50§! additional seats"
  Jacques_piou_citation:0 "“Le peuple a besoin d'une figure d'autorité supérieure, gardienne de la nation, gardée par la nation. C'est un ouvrage mérité par les Français, offert par Dieu.“"
 
  FRA_1914_disposition:0 "1914 Disposition"
