RAJ Charles Hardinge Assasination UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9317,7 +9317,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_raj.2.a:0 "Ok."
 
  ww1_raj.1.t:0 "The Earl of Minto Resigns."
- ww1_raj.1.d:0 "Gilbert Elliot-Murray-Kynynmound, 4th Earl of Minto retires.\nHe followed in the footsteps of his great-grandfather, the first Lord Minto. When John Morley as Secretary of State for India wrote to Minto arguing that "Reforms may not save the Raj, but if they don't, nothing else will", Minto replied:\n...when you say that "if reforms do not save the Raj nothing else will" I am afraid I must utterly disagree. The Raj will not disappear in India as long as the British race remains what it is, because we shall fight for the Raj as hard as we have ever fought, if it comes to fighting, and we shall win as we have always won.\nThe reforms were called usually by the name "Morley-Minto Reforms" because both John Morley and Lord Minto worked together to draw these reforms. They were passed by the British parliament in 1909 as the Indian Councils Act.\nHe was succeeded by Lord Hardinge of Penshurst."
+ ww1_raj.1.d:0 "Gilbert Elliot-Murray-Kynynmound, 4th Earl of Minto retires, following in the footsteps of his great-grandfather, the first Lord Minto.\n\nWhen John Morley as Secretary of State for India wrote to Minto arguing that "Reforms may not save the Raj, but if they don't, nothing else will", Minto replied: When you say that "if reforms do not save the Raj nothing else will" I am afraid I must utterly disagree. The Raj will not disappear in India as long as the British race remains what it is, because we shall fight for the Raj as hard as we have ever fought, if it comes to fighting, and we shall win as we have always won.\n\nThe reforms were called usually by the name "Morley-Minto Reforms" because both John Morley and Lord Minto worked together to draw these reforms. They were passed by the British parliament in 1909 as the Indian Councils Act.\n\nHe will be succeeded by Lord Hardinge of Penshurst."
  ww1_raj.1.a:0 "He will be remembered."
 
  ww1_raj.3.t:0 "Third Delhi Durbar"
@@ -9406,6 +9406,16 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_raj.21.t:0 "Non-cooperation movement"
  ww1_raj.21.d:0 "PLACEHOLDER"
  ww1_raj.21.a:0 ""
+
+ ww1_raj.27.t:0 "Assasination Attempt Against Viceroy Charles Hardinge"
+ ww1_raj.27.d:0 "The Viceroy and the Vicerine were riding on an elephant, making their ceremonial entry into the capital of India, when 17-year-old Basanta Kumar Biswas, a revolutionary from the village of Nadia, threw a homemade bomb at the Viceroy. Although the umbrella-bearer was killed, the Vicerine and the elephant remained unscathed. Lord Hardinge, however, was injured by shrapnel over his back, legs and head, and the flesh on his shoulders was torn into strips. There was some difficulty in removing the Viceroy from the back of the elephant on which they were travelling, and our doctors are still uncertain regarding the Viceroy's fate."
+ ww1_raj.27.a:0 "Charles Hardinge lives."
+ ww1_raj.27.b:0 "Charles Hardinge dies."
+ RAJ_hardinge_fucking_dies:0 "§YCharles Hardinge§! dies. Which means his wife is now single, if you're interested.\n"
+
+ ww1_raj.28.t:0 "Garret O'Moore Creagh Steps Down."
+ ww1_raj.28.d:0 "PLACEHOLDER"
+ ww1_raj.28.a:0 "It's time to close this dark chapter in the Raj's history."
   
  # PORTUGAL
  ww1_portugal.1.t:0 "Join the Entente"
