--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -416,6 +416,8 @@
  RAJ_governor_of_bombay:0 "Governor of Bombay"
  RAJ_private_secretary:0 "Private Secretary"
  RAJ_viceroy_and_governor_general_of_india:0 "Viceroy and Governor-General of India"
+ RAJ_provisional_viceroy_and_governor_general_of_india:0 "Provisional Viceroy and Governor-General of India"
+ RAJ_chief_of_staff:0 "Chief of Staff, India"
  RAJ_reformer:0 "Reformer"
  RAJ_caring_bureaucrat:0 "Caring Bureaucrat"
  RAJ_careerist:0 "Careerist"
