--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8856,11 +8856,12 @@ july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][
 
  GER_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yreichstag§!"
 
- GER_vote_strengh_tt:0 "The Law may be voted by §Y[?merged_vote_strengh|0] Deputies§!."
+ GER_vote_strengh_tt:0 "The Law may be voted by §Y[?merged_vote_strengh|0] Deputies§! on §Y199 required§!."
 
- GER_sway_left_will_vote_15_percent:0 "§Y15%§! of §OLeft deputies§! will vote it. (§Y[?left_vote|0] seats§!)"
- GER_sway_center_will_vote_15_percent:0 "§Y15%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
- GER_sway_right_will_vote_15_percent:0 "§Y15%§! of §2Right deputies§! will vote it. (§Y[?right_vote|0] seats§!)"
+ GER_sway_left_will_vote_20_percent:0 "§Y20%§! of §OLeft deputies§! will vote it. (§Y[?left_vote|0] seats§!)"
+ GER_sway_center_will_vote_20_percent:0 "§Y20%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
+ GER_sway_right_will_vote_20_percent:0 "§Y20%§! of §2Right deputies§! will vote it. (§Y[?right_vote|0] seats§!)"
+ GER_sway_neutral_will_vote_20_percent:0 "§Y20%§! of §LNeutral deputies§! will vote it. (§Y[?neutral_vote|0] seats§!)"
 
  GER_law_pass:0 "§GThe Law shall pass§!"
 
@@ -8868,11 +8869,11 @@ july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][
 
  GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
 
- GER_vote_left_law:0 "This is considered as a leftist law. §Y80%§! of §Oleft deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
+ GER_vote_left_law:0 "This is considered as a leftist law. §Y90%§! of §Oleft deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
 
- GER_vote_center_law:0 "This is considered as a centrist law. §Y80%§! of §gcenter deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
+ GER_vote_center_law:0 "This is considered as a centrist law. §Y90%§! of §gcenter deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
 
- GER_vote_right_law:0 "This is considered as a rightist law. §Y80%§! of §2right deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
+ GER_vote_right_law:0 "This is considered as a rightist law. §Y90%§! of §2right deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
 
 left_vote_in_progress:0 "§OLeftist§! Law is being voted"
 center_vote_in_progress:0 "§gCentrist§! Law is being voted"
