french mission laws using remove effect basis

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -849,7 +849,7 @@ FRA_saint_erasme_battery_decomission_done:0 "Saint-Erasme Battery Decomission Vo
 
 FRA_exceptional_credit_to_minister_of_war:0 "Exceptional Credit to Minister of War"
 FRA_exceptional_credit_to_minister_of_war_desc:0 "A credit of 5,986,675 francs was requested by the Ministry of War in order to reduce the working hours of war industrial establishments. A large part of the allocated funds will be dedicated to paying additional salaries linked to the opening of new positions.\n\nPart of these funds will also be used to finance maintenance and certain war industries, including artillery production, marksmanship training and aeronics."
-FRA_exceptional_credit_to_minister_of_war_done:0 "Exceptional Credit to Minister of War Vote Passed"
+FRA_exceptional_credit_to_minister_of_war_passed:0 "Exceptional Credit to Minister of War Vote Passed"
 
 FRA_investments_in_indochina:0 "Investements in [IND.getFlag]Indochina"
 FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
@@ -8852,3 +8852,8 @@ july_crisis_austrian_claim:0 "§Y[AUH.getFlag][AUH.getName]§! wants reparation 
 july_crisis_serbian_claim:0 "§Y[SER.getFlag][SER.getName]§! oppose this decision"
 july_crisis_alert:0 "July crisis alert"
 july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][AUH.getAdjective]§! claims for reparations toward §Y[SER.getFlag][SER.getName]§!."
+
+FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
+FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
+FRA_effect_if_law_pass:0 "\n§YEffect if the vote pass :§!"
+FRA_effect_if_law_fail:0 "\n§REffect if the vote fail :§!"
