--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6954,6 +6954,12 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
  FRA_300_seats_n:0 "Control less than 300 seats"
  FRA_350_seats_n:0 "Control less than 350 seats"
 
+ FRA_150_seats_tt:0 "We need §Y150 seats§! to pass this law."
+ FRA_200_seats_tt:0 "We need §Y200 seats§! to pass this law."
+ FRA_250_seats_tt:0 "We need §Y250 seats§! to pass this law."
+ FRA_300_seats_tt:0 "We need §Y300 seats§! to pass this law."
+ FRA_350_seats_tt:0 "We need §Y350 seats§! to pass this law."
+
 
 
  FRA_150_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 150 seats"
