don't write in Cyrillic

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -7885,7 +7885,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  TUR_expand_kirkuk_oil_fields:0 "Expand Kirkuk Oil Fields"
  TUR_improve_constantinople_eskisehir_line:0 "Improve [347.GetName] - Eskişehir Line"
  TUR_organize_worker_rallies_in_thrace:0 "Organize Worker Rallies in Thrace"
- TUR_appease_imro_militias:0 "Appease ВМРО Militias"
+ TUR_appease_imro_militias:0 "Appease VMORO Militias"
  TUR_permit_local_bulgarian_parties:0 "Permit Local Bulgarian Parties"
  TUR_serbian_peasent_meetings:0 "Serbian Peasent Meetings"
  TUR_settling_albanians_into_cities:0 "Settling Albanians into Cities"
