--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -784,7 +784,7 @@
  TUR_integrated_economy:0 "Integrated Economy"
  TUR_integrated_economy_tt:0 "For every state shown in the §YOttoman Minority Map§! without a negative minority modifier, we'll get §G+0.10%§! Production Efficiency Retention, §G+0.10%§! £prod_eff_cap Production Efficiency Cap and §G+0.10%§! £prod_eff Production Efficiency growth.\n\n"
  TUR_organized_worker_rallies:0 "Organized Worker Rallies"
- TUR_ceeasefire_with_imro:0 "Ceasefire with ВМРО"
+ TUR_ceeasefire_with_imro:0 "Ceasefire with VMORO"
  TUR_eased_working_times:0 "Eased Working Times"
  TUR_migration_into_cities:0 "Migration into Cities"
  TUR_undergoing_land_reforms:0 "Undergoing Land Reforms"
