working on historical path

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4945,6 +4945,7 @@
  has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
  has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
  TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
+ TUR_mobilize_the_civilian_population_tt:0 "Modify §YSecond Constitutional Era§! by\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
