--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10460,12 +10460,15 @@ FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing
  SAU_impose_tribute_on_pilgrams: "Impose Pilgram Tribute"
  SAU_cut_off_british_ties: "Cut Off British Ties"
  SAU_conquest_of_hejaz: "Conquest of Hejaz"
+ SAU_conquest_of_hejaz_desc: "The great and holy lands of Hejaz and Tihamah have finally come under the rule of the House of Saud. Now, Abdulaziz is not only the ruler of Central Arabia but also the humble servant of the Two Holy Mosques."
  SAU_search_for_oil_companies: "Foreign Oil Companies"
+ SAU_search_for_oil_companies_desc: "In order to secure its future and the well-being of its citizens, the Saudi state needs to prospect for oil. With oil already discovered in Bahrain and Iraq, there is a great chance that the Ihsa'a coast has oil as well. However, the assistance of foreign professionals is needed."
  SAU_holy_cities: "Holy Cities"
  SAU_apologize_to_egypt: "Egyptian Aid Relief"
  SAU_defend_ikhwan: "Cut Ties with Egypt"
  SAU_renovate_mecca_area: "Renovate Mecca Area"
  SAU_need_for_reform: "The Need for Reform"
+ SAU_need_for_reform_desc: "The hardliners of the Wahhabi creed need to loosen their stance on societal development and technological advances. To build a strong and influential state, the first step should be accepting younger and more efficient bureaucrats."
  SAU_egyptian_advisors: "Invite Egyptian Advisors"
  SAU_iraqi_advisors: "Invite Iraqi Advisors"
  SAU_syrian_advisors: "Invite Levantine Advisors"
