Polish generals push

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -311,6 +311,8 @@
  POL_jan_romer:0 "Jan Romer"
  POL_leonard_skierski:0 "Leonard Skierski"
  POL_franciszek_latinik:0 "Franciszek Latinik"
+ POL_boleslaw_roja:0 "Bolesław Roja"
+ POL_robert_lamezan_salins:0 "Robert Lamezan-Salins"
 
  ### Admirals
 
@@ -320,6 +322,7 @@
  POL_prime_minister_red_pilsudskite:0 "Red Pilsudskite" #Prime Minister: Red Pilsudskite
  POL_prime_minister_ambassador_of_polish_affairs:0 "Ambassador of Polish Affairs" #Prime Minister: Ambassador of Polish Affairs
  POL_germanophile:0 "Polish Germanophile"
-
+ POL_wojciech_trampczynski:0 "Wojciech Trąmpczyński"
+ POL_marshal_of_sejm:0 "Marshal of the Sejm"
 
  ### Military High Command
