Adolf von Rhemen by Artyom

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -221,6 +221,7 @@
  AUH_karl_von_sturgkh:0 "Karl von Stürgkh"
  AUH_marijan_varesanin:0 "Marijan Varešanin von Vareš"
  AUH_oskar_potiorek:0 "Oskar Potiorek"
+ AUH_adolf_von_rhemen:0 "Adolf von Rhemen"
 
  # AUSTRIA
  AUS_franz_koritschoner:0 "Franz Koritschoner"
