Myat Phaya Lat by Harry the Ink Bartender

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -472,6 +472,7 @@
  # BURMA
  BRM_thibaw:0 "Thibaw"
  BRM_thado_minye_mingaung:0 "Thado Minye Minguang"
+ BRM_myat_phaya_lat:0 "Myat Phaya Lat"
 
  # CAMBODIA
  CAM_sisowath:0 "Sisowath"
