--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13697,7 +13697,8 @@ ww1_greece.246.a:0 "Our failures continue to burden us."
  # BURMA
  ww1_burma.1.t:0 "Thibaw Died!"
  ww1_burma.1.d:0 "King Thiba Min, who tried to stop British colonisation attempt and to modernise Burma, died today."
- ww1_burma.1.a:0 "He will be missed."
+ ww1_burma.1.a:0 "Glory to Myat Phaya Lat!"
+ ww1_burma.1.b:0 "We can't accept a female monarch!"
 
  # Volunteer Army
  ww1_sra.1.t:0 "Drozdovsky's March"
