--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2144,6 +2144,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_tax_collection_in_albania:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_albania_desc:0 "Muslim Albanians in [FROM.GetName] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
  TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
+ TUR_tax_collection_in_albania_tt2:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
  TUR_increased_albanian_conscriptions:0 "Increased Albanian Conscription"
  TUR_increased_albanian_conscriptions_desc:0 "Thanks to its Muslim population, Albania stands as a stronghold as Ottoman rule in the Western Balkans. Yet the region still remains rather away from our total reach. By increasing centralization and conscription, Albanian vilayets can become a part of yet another Ottoman province."
  TUR_increased_albanian_conscriptions_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
