--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4288,6 +4288,14 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.105.t:0 "Hafiz Hakkı Paşa Dies of Typhus"
  ottoman.105.d:0 "The most successful military graduate of his generation and a member of the House of Osman through marriage, His Highness Hafız Hakkı Paşa has passed away due to typhus. As he contracted it as he was commanding his armies on the Eastern Front, fighting against the enemy. Despite of all the measures and attempts, he could not have been recovered."
  ottoman.105.a:0 "Rest easy, paşam."
+ ottoman.106.t:0 "Unintended Consequences"
+ ottoman.106.d:0 "Our policy of taxation towards Albanians have proven to be quite unpopular. As a result, the population in taxed states have started to organize resistance."
+ ottoman.106.a:0 "No one is an exception to taxation."
+ ottoman.106.tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n\n"
+ ottoman.107.t:0 "Unintended Consequences"
+ ottoman.107.d:0 "Albanians have long been desiring independence from our rule. Their resistance movements have already been gaining large traction within the empire. Yet our recent centralization policies have been the last straw. After the enaction of our new policies, Albanian independence leaders have started to organize further resistance activities."
+ ottoman.107.a:0 "The fate of Albania lies within those of the Turks"
+ ottoman.107.tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\n\n"
 
  ottoman.105.t:0 "Ottoman-Russian Subjugation"
  ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
