--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4414,11 +4414,11 @@
  TUR_lessons_of_the_picardie_maneuvers_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nArmy Experience Gain: §G+10%§!\n\n"
  TUR_call_for_the_balkan_war:0 "Call for the Balkan War"
  TUR_call_for_the_balkan_war_desc:0 "There were rumors about a joint invasion of our Balkan territories by the other Christian Balkan nations. But we didn't guess it'd happen this soon. We might be unprepared, or even outnumbered; but our brave soldier won't surrender our lands to these filthy backstabbers."
- TUR_call_for_the_balkan_war_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_texticon  Recruitable Population Factor: §G5%§!\nResistance Growth Speed in our states occupied by the enemy: §G+10%§!\n\n"
+ TUR_call_for_the_balkan_war_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_texticon  Recruitable Population Factor: §G5%§!\n£political_violence_gain_enemy_texticon  Resistance Growth Speed in our states occupied by the enemy: §G+10%§!\n\n"
  TUR_call_for_the_balkan_war_tt2:0 "One of the following must be true:\n   Has had a war with §Y[SER.GetFlag][SER.GetName]§!\n   Has had a war with §Y[BUL.GetFlag][BUL.GetName]§!\n   Has had a war with §Y[MNT.GetFlag][MNT.GetName]§!\n   Has had a war with §Y[GRE.GetFlag][GRE.GetName]§!"
  TUR_call_for_the_trablusgarp_war:0 "Call for the Trablusgarp War"
  TUR_call_for_the_trablusgarp_war_desc:0 "We already knew that Italians had their eyes on our last lands in Africa. We must defend Trablusgarp no matter the cost against the Italian invaders."
- TUR_call_for_the_trablusgarp_war_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nNon-core Manpower: §G+5.00%§!\nHeat Attrition: §G-10.0%§!\n\n"
+ TUR_call_for_the_trablusgarp_war_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_noncore_texticon  Non-core Manpower: §G+5.00%§!\n£attrition_hot_texticon  Heat Attrition: §G-10.0%§!\n\n"
  TUR_call_for_the_trablusgarp_war_tt2:0 "Has had a war with §Y[ITA.GetFlag][ITA.GetName]§!"
  TUR_adopt_modern_firearms:0 "Adopt Modern Firearms"
  TUR_adopt_modern_firearms_desc:0 "Apart from training our soldiers and improving our general staff, modernization of our army requires the acquisition of modern firearms are necessary to modernize our army. As we switch to modern armament and firearms, our army will also continue its modernization."
@@ -4609,7 +4609,7 @@
  TUR_law_on_churches_tt4:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions\nUnlocks §YIntegrate Macedonia§! Decisions\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
- TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
  TUR_increase_taxes_on_albanians_tt2:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
@@ -4617,7 +4617,7 @@
  TUR_approve_grece_memorandum_tt2:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.50%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
- TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\nResistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
  TUR_centralize_albania_tt2:0 "Unlocks £decision_icon_small  §YIncreased Albanian Conscriptions§! Decisions\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions\n"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
