--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3061,6 +3061,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SAU_Abdullah_Alireza_Zainal: "Abdullah Alireza Zainal"
  SAU_Princess_Noura_Al_Saud: "Noura Al Saud"
  SAU_Muhammad_bin_Abdullatif_Al_Sheikh: "Muhammad Bin Abdullatif Al Sheikh"
+ SAU_john_philby: "St John Philby"
+ SAU_Majid_Al_Khathilah: "Majid Al Khathilah"
+ SAU_abdullah_bin_suleiman: "Abdullah Bin Suleiman Al Hamdan"
+ SAU_Ahmed_bin_Abdullah_Al_Thanyan_Al_Saud: "Ahmed Al Thanyan Al Saud"
+ SAU_said_kurdi: "Said Al Kurdi"
  SAU_Turki_bin_Abdulaziz: "Turki Bin Abdulaziz"
  SAU_abdul_mohsen_al_faram: "Abdul Mohsen Al Faram"
  SAU_Rashid_bin_Layla: "Rashid Bin Layla"
